--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,18 +22,13 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+      run: go get -v -t -d ./...
 
     - name: Build
-      run: go build -v .
+      run: go build -v -o adding cmd/adding/*.go
 
     - name: Test
-      run: go test -v .
+      run: go test -v -count=1 ./...
       
     - name: Run
-      run: go run -v .
+      run: go run -v cmd/adding/main.go
