udpate branch trigger to work on main

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,12 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
