--- a/.github/workflows/parallel-example.yaml
+++ b/.github/workflows/parallel-example.yaml
@@ -17,7 +17,7 @@ jobs:
     
   lint:
     runs-on: ubuntu-latest
-    needs: [common-setup]
+    needs: [setup]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -29,7 +29,7 @@ jobs:
     
   test:
     runs-on: ubuntu-latest
-    needs: [common-setup]
+    needs: [setup]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -41,7 +41,7 @@ jobs:
     
   typecheck:
     runs-on: ubuntu-latest
-    needs: [common-setup]
+    needs: [setup]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
