--- a/.github/workflows/parallel-example.yaml
+++ b/.github/workflows/parallel-example.yaml
@@ -14,6 +14,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
+      - run: echo "$(npm bin)" >> $GITHUB_PATH
     
   lint:
     runs-on: ubuntu-latest
@@ -25,7 +26,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: npx eslint
+      - run: eslint
     
   test:
     runs-on: ubuntu-latest
@@ -37,7 +38,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: npx jest
+      - run: jest
     
   typecheck:
     runs-on: ubuntu-latest
@@ -49,4 +50,4 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: npx tsc
+      - run: tsc
