--- a/.github/workflows/parallel-example.yaml
+++ b/.github/workflows/parallel-example.yaml
@@ -1,5 +1,4 @@
-name: Go
-
+name: Node
 on:
   push:
     branches: [ main ]
@@ -14,8 +13,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: echo "$(npm bin)" >> $GITHUB_PATH
-    
+
   lint:
     runs-on: ubuntu-latest
     needs: [setup]
@@ -26,7 +24,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: eslint
+      - run: npx eslint
     
   test:
     runs-on: ubuntu-latest
@@ -38,7 +36,7 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: jest
+      - run: npx jest
     
   typecheck:
     runs-on: ubuntu-latest
@@ -50,4 +48,4 @@ jobs:
           node-version: 14
           cache: npm
       - run: npm ci
-      - run: tsc
+      - run: npx tsc
